--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- 移动端 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- 解决 -->
+    <meta name="referrer" content="no-referrer" />
     <title>nubia</title>
   </head>
   <body>
